# routes/noteRoutes.js
@@ -4,6 +4,7 @@ const router = express.Router();
 const noteController = require('../controllers/noteController');
 
 router.get('/', noteController.getAllNotes);
+router.get('/search', noteController.searchNotes);
 router.get('/:id', noteController.getNoteById);
 router.post('/', noteController.createNote);
 router.put('/:id', noteController.updateNote);
